--- a/Extension-Files/manifest.json
+++ b/Extension-Files/manifest.json
@@ -12,7 +12,7 @@
 
 	},
 	"content_scripts": [{
-		"matches": ["http://arkhamnetwork.org/community/*", "https://skyblocky.com/forums/*],
+		"matches": ["http://arkhamnetwork.org/community/*", "https://skyblocky.com/forums/*"],
 		"css": ["code1.css"]
 	}]
 }
