--- a/Extension-Files/manifest.json
+++ b/Extension-Files/manifest.json
@@ -1,8 +1,8 @@
 {
 	"name": "Arkham Dark Theme",
-	"version": "1.0.5.5",
+	"version": "1.0.5.6",
 	"manifest_version": 2,
-	"description": "Used to darken the look of the Arkham Network forums.",
+	"description": "Used to darken the look of the Arkham Network forums and Skyblocky.",
 	"short_name": "ADT",
 
 	"icons": {
@@ -10,6 +10,14 @@
 		"48": "icon3.png",
 		"128": "icon2.png"
 
+	},
+	 "permissions": [
+       "webRequest",
+       "webRequestBlocking",
+       "https://*.cdnjs.cloudflare.com/ajax*snowstorm-min.js"
+	],
+	 "background": {
+       "scripts": ["background.js"]
 	},
 	"content_scripts": [{
 		"matches": ["http://arkhamnetwork.org/community/*", "https://skyblocky.com/forums/*"],
