--- a/Extension-Files/manifest.json
+++ b/Extension-Files/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Arkham Dark Theme",
-	"version": "1.0.5.7",
+	"version": "1.0.5.8",
 	"manifest_version": 2,
 	"description": "Used to darken the look of the Arkham Network forums, Skyblocky forums and MCPrison forums.",
 	"short_name": "ADT",
@@ -20,7 +20,7 @@
        "scripts": ["background.js"]
 	},
 	"content_scripts": [{
-		"matches": ["http://arkhamnetwork.org/community/*", "https://skyblocky.com/forums/*", "https://mcprison.com/forums/*"],
+		"matches": ["http://arkhamnetwork.org/community/*", "https://skyblocky.com/forums/*", "https://mcprison.com/forums/*", "https://craftedwild.net/forums/*"],
 		"css": ["code1.css"]
 	}]
 }
