--- a/Extension-Files/manifest.json
+++ b/Extension-Files/manifest.json
@@ -2,7 +2,7 @@
 	"name": "Arkham Dark Theme",
 	"version": "1.0.5.9",
 	"manifest_version": 2,
-	"description": "Used to darken the look of the Arkham Network forums, Skyblocky forums and MCPrison forums.",
+	"description": "Used to darken the look of the Arkham Network forums, Skyblocky forums, MCPrison's forums and CraftedWild's forums.",
 	"short_name": "ADT",
 
 	"icons": {
