--- a/Extension-Files/manifest.json
+++ b/Extension-Files/manifest.json
@@ -1,8 +1,8 @@
 {
 	"name": "Arkham Dark Theme",
-	"version": "1.0.5.9",
+	"version": "1.0.6",
 	"manifest_version": 2,
-	"description": "Used to darken the look of the Arkham Network forums, Skyblocky forums, MCPrison's forums and CraftedWild's forums.",
+	"description": "Used to darken the look of the Arkham Network forums, Skyblocky forums, MCPrison forums and CraftedWild's forums.",
 	"short_name": "ADT",
 
 	"icons": {
@@ -11,6 +11,11 @@
 		"128": "icon2.png"
 
 	},
+	
+	"browser_action": {
+	 "default_popup": "gui.html"
+	},
+	
 	 "permissions": [
        "webRequest",
        "webRequestBlocking",
@@ -22,5 +27,6 @@
 	"content_scripts": [{
 		"matches": ["http://arkhamnetwork.org/community/*", "https://skyblocky.com/forums/*", "https://mcprison.com/forums/*", "https://craftedwild.net/forums/*"],
 		"css": ["code1.css"]
+		
 	}]
 }
