--- a/Extension-Files/manifest.json
+++ b/Extension-Files/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Arkham Dark Theme",
-	"version": "1.0.7",
+	"version": "1.0.7.2",
 	"manifest_version": 2,
 	"description": "Used to darken the look of the Arkham Network forums, Skyblocky forums, MCPrison forums and CraftedWild's forums.",
 	"short_name": "ADT",
@@ -26,7 +26,7 @@
        "scripts": ["background.js"]
 	},
 	"content_scripts": [{
-		"matches": ["http://arkhamnetwork.org/community/*", "https://skyblocky.com/forums/*", "https://mcprison.com/forums/*", "https://craftedwild.net/forums/*"],
+		"matches": ["http://arkhamnetwork.org/community/*", "https://candycraft.org/community/forums/*"],
 		"css": ["code1.css"]
 		
 	}]
