--- a/Extension-Files/manifest.json
+++ b/Extension-Files/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Arkham Dark Theme",
-	"version": "1.3",
+	"version": "1.4",
 	"manifest_version": 2,
 	"description": "Used to darken the look of the Arkham Network forums.",
 	"short_name": "ADT",
@@ -22,8 +22,8 @@
 	],
 
 	"content_scripts": [{
-		"matches": ["http://arkhamnetwork.org/community/*"],
-		"exclude_matches": ["http://arkhamnetwork.org/community/admin.php/*"],
+		"matches": ["http://arkhamnetwork.org/community/*, https://arkhamnetwork.org/community/*"],
+		"exclude_matches": ["http://arkhamnetwork.org/community/admin.php/*, http://arkhamnetwork.org/community/admin.php/*"],
 		"css": ["code1.css"]
 		
 	}]
