--- a/Extension-Files/manifest.json
+++ b/Extension-Files/manifest.json
@@ -23,7 +23,7 @@
 
 	"content_scripts": [{
 		"matches": ["http://arkhamnetwork.org/community/*, https://arkhamnetwork.org/community/*"],
-		"exclude_matches": ["http://arkhamnetwork.org/community/admin.php/*, http://arkhamnetwork.org/community/admin.php/*"],
+		"exclude_matches": ["http://arkhamnetwork.org/community/admin.php/*, https://arkhamnetwork.org/community/admin.php/*"],
 		"css": ["code1.css"]
 		
 	}]
